# backend/swagger/docs/swagger.json
@@ -539,6 +539,13 @@
                 "summary": "Update existing event's image",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Event Id",
+                        "name": "event_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "file",
                         "description": "Event image",
                         "name": "event_image",
